# carbonintensity-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  region.rs  target.rs
