[package]
name = "carbonintensity-api"
version = "0.1.0"
edition = "2021"
authors = ["Julien Nioche <jnioche@gmail.com>"]
repository = "https://github.com/jnioche/carbonintensity-api"
keywords = ["carbon-intensity-api", "energy", "api", "national-grid"]

[dependencies]
error-chain = "0.12.4"
reqwest = {version ="0.11.22" , features = ["blocking"] }
serde_json = "1.0.108"
tokio = "1.33.0"
