[package]
name = "carbonintensity-api"
version = "0.1.0"
edition = "2021"
authors = ["Julien Nioche <jnioche@gmail.com>"]
repository = "https://github.com/jnioche/carbonintensity-api"
keywords = ["carbon-intensity-api", "energy", "api", "national-grid"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
serde = { version = "1.0.108" , features = ["derive"] }
serde_json = "1.0.108"
serde_with = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
thiserror = "1.0.50"
url = "2.4.1"
futures = "0.3"
clap = { version = "4.4.8", features = ["derive"] }
chrono = "0.4.31"

[lib]
name = "carbonintensity"
path = "src/lib.rs"
