[package]
name = "carbonintensity-api"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
authors = ["Julien Nioche <jnioche@gmail.com>"]
description = "Provides a client for the UK National Grid Carbon Intensity API"
repository = "https://github.com/jnioche/carbonintensity-api"
keywords = ["carbon-intensity-api", "energy", "api", "national-grid"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = [
    "json",
] } # reqwest with JSON parsing support
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.50"
url = "2.4.1"
futures = "0.3"
clap = { version = "4.4.8", features = ["derive"] }
chrono = "0.4.31"

[lib]
name = "carbonintensity"
path = "src/lib.rs"
